@@ -24,6 +24,9 @@
     KEYB command (and the keyboardlayout config option)
     also accept "jp", "ko", "cn", "tw", "hk", "zh" as
     layout names for setting code pages. (Wengier)
+  - SETCOLOR command can now change the text-mode color
+    schemes in outputs rather than the TrueType font
+    output too (VGA mode only). (Wengier)
   - Added "ttf.wpfg" config option in [render] section
     which can optionally specify a foreground color
     (0-7) for the TTF output, similar to "ttf.wpbg" for
